--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,163 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <title>La page que vous recherchez n'existe pas (404)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style type="text/css">
+    body, html {
+      margin: 0;
+      width: 100%;
+      font-family: 'Arial'
+    }
+    header {
+      background-color: #666666
+    }
+    .container{
+      width: 80%;
+      margin: 0 auto;
+      text-align: center;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .img-logo{
+      max-height: 140px;
+      width: auto;
+      margin-top: 20px
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .teaser {
+      text-align: center ;
+      padding: 30px 5%;
+      width: 100%;
+      letter-spacing: 0.15em;
+      /*text-transform: uppercase;*/
+      line-height: 1.4em;
+      font-size: 1em;
+      display: inline-block;
+      box-sizing: border-box;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    .line{
+      display: block;
+      width: 80px;
+      height: 1px;
+      background: #1d1c1c;
+      margin: 25px auto;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .btn {
+      display: inline-block;
+      font-weight: normal;
+      text-align: center;
+      vertical-align: middle;
+      touch-action: manipulation;
+      cursor: pointer;
+      background-image: none;
+      border: 1px solid transparent;
+      white-space: nowrap;
+      padding: 8px;
+      font-size: 16px;
+      /*border-radius: 3px;*/
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
+      text-transform: uppercase;
+      letter-spacing: 0.09em;
+      font-size: 13px;
+
+      width: 175px;
+      margin: 5px 2px;
+      transition: background-color 250ms ease, border-color 250ms ease;
+
+    }
+
+    .btn-primary{
+      color: #fff;
+      background-color: #666666;
+      border-color: #666666;
+    }
+
+    .btn-primary:hover{
+      background-color: #535353;
+      border-color: #4d4d4d;
+    }
+
+    a {
+      text-decoration: none
+    }
+
+    .erreur{
+      text-transform: uppercase;
+      margin-top: 50px;
+    }
+    .erreur .small {
+      font-size: 0.8em;
+      letter-spacing: 0.4em
+    }
+
+    .erreur .big {
+      font-size: 15em;
+      font-weight: bold;
+      line-height: 0.9em;
+      color: #ddd;
+    }
+
+    /* phone */
+    @media (max-width: 768px) {
+      .container {
+        width: 100%;
+      }
+      .img-logo {
+        max-height: 100px;
+        margin-top: 10px
+      }
+
+      .erreur {
+        margin-top: 30px
+      }
+      .erreur .big {
+        font-size: 7em;
+      }
+
+      .btn-primary {
+        width: 220px;
+        font-size: 15px;
+        display: block;
+        margin: 10px auto;
+      }
+
+      .teaser {
+        font-size: 1em;
+        line-height: 1.5em;
+        padding: 20px 10px 10px 10px;
+      }
+
+      .line {
+        margin: 20px auto;
+      }
+
+    }
+
   </style>
 </head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+<body>
+  <header>
+    <div class="container">
+      <a href="/"><img src="/logo.svg" alt="Pole ESS" class='img-logo' /></a>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+  </header>
+  <div class="container" style="margin-bottom: 50px">
+    <div class= "erreur">
+      <div class="small">erreur</div>
+      <div class="big">404</div>
+    </div>
+    <div class="teaser">
+      La page que vous recherchez est introuvable.<br>
+      Peut-&ecirc;tre avez-vous entr&eacute; une adresse incorrecte.
+      <div class="line"></div>
+    </div>
+    <a class="btn btn-primary" href="/">Retour &agrave; l'accueil</a>
   </div>
 </body>
 </html>
